--- a/cougmarketplace/package.json
+++ b/cougmarketplace/package.json
@@ -12,6 +12,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.1",
     "autoprefixer": "^10.4.20",
+    "flowbite": "^3.1.2",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
