--- a/cougmarketplace/package.json
+++ b/cougmarketplace/package.json
@@ -15,7 +15,9 @@
     "flowbite": "^3.1.2",
     "next": "15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-confetti": "^6.4.0",
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.9",
